기부 테이블 추가, 유저 테이블 수정, 기부, 상품, 유저 API 수정
