# src/routes/middlewares/donate/donation/donation.validator.ts
@@ -1,0 +1,8 @@
+import { body, ValidationChain } from "express-validator";
+
+const DonationValidation: ValidationChain[] = [
+  body("contributions").exists(),
+  body("storeId").exists(),
+];
+
+export default DonationValidation;
